# nidl

./: .buildinfo  .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  README.md  README.rst  authors.html  bibliography.html  ci.html  development.html  glossary.html  index.html  introduction.html  maintenance.html  model_probing.html  objects.inv  open_datasets.html  pretrained_models.html  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  sg_execution_times.html  user_guide.html  versions.html  whats_new.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help.md  installation_issue.md
.github/workflows/: documentation.yml  linters.yml  testing.yml
_downloads/0a4781ae0cfa4512beec9d5d655388f4/: simclr_stl10.ipynb
_downloads/229f34ee184df5948b0442d559ccec46/: simclr_stl10.py
_downloads/35bb6e49ecd293702d39620bd6583aeb/: plot_simclr_mnist.ipynb
_downloads/3dc10726b0eb16489a8589608875ae90/: plot_yaware_openbhb.ipynb
_downloads/46ba3ac115ee8342b83d278cd506574a/: plot_yaware_openbhb.py
_downloads/4bcde963b82daa95bbcc8cfd3fc7dc9e/: plot_match_icosahedron.ipynb
_downloads/623702e379b8d5aeee54fa263e440413/: plot_unet_segmentation.ipynb
_downloads/63f3629aea880c78eee111a499951010/: plot_model_probing.py
_downloads/6afc563a4cdff6477272da39bfb2be81/: plot_spherical_neighbors.ipynb
_downloads/8e00583a8735d983b9e2879fd7ba9f3c/: plot_project_texture.ipynb
_downloads/9891edd964521be9e6f154fc1a8056c6/: plot_openbhb.ipynb
_downloads/9f8119e5a67f0d46db3d7c79b526caff/: plot_augmentation.ipynb
_downloads/a680cbefe84fed6b73bae560d082bc9d/: plot_dcl_vs_simclr.ipynb
_downloads/a6e0c7e5033c0d3ed91fd1f7a5037453/: openbhb.ipynb
_downloads/b2f917ea7264862b374cb5c86a43efc7/: plot_augmentation.py
_downloads/bba0c7438527798e35a04829d334cf21/: plot_ijepa_medmnist.ipynb
_downloads/be9680f7a41c069a0bf1b905441c2b63/: plot_barlowtwins_openbhb.ipynb
_downloads/cbc2e7cdaa07c077bdac94dd974459a9/: model_probing.ipynb
_downloads/de27dcb048492f50418bc1886a585699/: yaware_openbhb.ipynb
_downloads/de93353e35f2196c199a69dfc5e421a6/: simclr_stl10.ipynb
_downloads/dfa4ecd93e1a6b50d625160b65e18c28/: plot_metrics_callback.ipynb
_downloads/e4c6575a58207362fb35822d44f91bc7/: plot_model_probing.ipynb
_downloads/eb2b08df03224f0a94b5a4938d17c517/: plot_openbhb_hydra.ipynb
_modules/: index.html
_modules/nidl/: experiment.html  transforms.html
_modules/surfify/: preprocessing.html  transforms.html  utils.html
_sources/: index.rst.txt  sg_execution_times.rst.txt
_sources/auto_examples/: index.rst.txt  plot_barlowtwins_openbhb.rst.txt  plot_dcl_vs_simclr.rst.txt  plot_ijepa_medmnist.rst.txt  plot_metrics_callback.rst.txt  plot_model_probing.rst.txt  plot_openbhb.rst.txt  plot_openbhb_hydra.rst.txt  plot_simclr_mnist.rst.txt  plot_yaware_openbhb.rst.txt  sg_execution_times.rst.txt
_sources/auto_gallery/: index.rst.txt  model_probing.rst.txt  openbhb.rst.txt  sg_execution_times.rst.txt  simclr_stl10.rst.txt  yaware_openbhb.rst.txt
_sources/modules/: callbacks.rst.txt  estimators.rst.txt
architectures/: index.html  surface.html  volume.html
auto_examples/: index.html  plot_barlowtwins_openbhb.html  plot_dcl_vs_simclr.html  plot_ijepa_medmnist.html  plot_metrics_callback.html  plot_model_probing.html  plot_openbhb.html  plot_openbhb_hydra.html  plot_simclr_mnist.html  plot_yaware_openbhb.html  sg_execution_times.html  simclr_stl10.html
auto_gallery/: index.html  model_probing.html  openbhb.html  sg_execution_times.html  simclr_stl10.html  yaware_openbhb.html
auto_gallery/surfify/: index.html  plot_augmentation.html  plot_match_icosahedron.html  plot_project_texture.html  plot_spherical_neighbors.html  plot_unet_segmentation.html  sg_execution_times.html
autoencoders/: index.html
data_augmentation/: index.html
dev/: .buildinfo  authors.html  bibliography.html  ci.html  development.html  glossary.html  index.html  introduction.html  maintenance.html  model_probing.html  objects.inv  open_datasets.html  pretrained_models.html  py-modindex.html  quickstart.html  search.html  searchindex.js  sg_execution_times.html  user_guide.html  versions.html  whats_new.html
dev/_sources/: glossary.rst.txt  index.rst.txt  sg_execution_times.rst.txt
dev/architectures/: index.html  surface.html  volume.html
dev/auto_examples/: index.html  plot_barlowtwins_openbhb.html  plot_model_probing.html  plot_openbhb.html  plot_yaware_openbhb.html  sg_execution_times.html  simclr_stl10.html
dev/autoencoders/: index.html
dev/data_augmentation/: index.html
dev/modules/: architectures.html  augmentation.html  callbacks.html  datasets.html  estimators.html  (+1 more)
doc/: Makefile  ci.jinja  conf.py  index.rst  introduction.rst  maintenance.rst  sg_execution_times.rst
examples/: README.txt  brain_age_openbhb.ipynb  example_simclr.ipynb  jepa_openbhb.ipynb  jepa_transforms.ipynb  mcvae_stratification.py  model_probing.py  openbhb.ipynb  openbhb_config.yaml  openbhb_roi.ipynb  plot_barlowtwins_openbhb.py  plot_dcl_vs_simclr.py  plot_ijepa_medmnist.py  plot_mcvae_stratification.py  plot_mcvae_synth.py  plot_metrics_callback.py  plot_model_probing.py  plot_multi_channels_vae.py  plot_openbhb.py  plot_openbhb_hydra.py  plot_simclr_mnist.py  plot_spherical_augmentations.py  plot_spherical_neighbors.py  plot_surfacic_backbones.py  plot_yaware_openbhb.py  simclr.ipynb  simclr_stl10.py  synthetic_dataset.ipynb  vicreg.ipynb  volume_transforms.ipynb  yaware.ipynb  yaware_openbhb.ipynb  yaware_openbhb.py
modules/: architectures.html  augmentation.html  callbacks.html  datasets.html  estimators.html  index.html  metrics.html
nidl/: __init__.py  experiment.py  info.py  transform.py  transforms.py
self_supervised_learning/: index.html
supervised_learning/: index.html
(+291 files in other folders)
