[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nidl"
readme = "README.rst"
requires-python = ">=3.9"
authors = [
    {name = "Antoine Grigis", email = "antoine.grigis@cea.fr"},
    {name = "Benoit Dufumier", email="benoit.dufumier@cea.fr"},
    {name = "Joël Chavas", email="joel.chavas@cea.fr"}
]
license = {text = "CeCILL-B"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "torch >=2.1.0, <2.8.0",
    "pytorch-lightning",
    "torchvision",
    "toml",
    "python-typex",
    "pandas",
    "scikit-learn"
]
dynamic = ["version"]

[project.optional-dependencies]
plugins = [
    "surfify",
]

[project.urls]
Source = "https://github.com/neurospin-deppinsight/nidl"
Tracker = "https://github.com/neurospin-deppinsight/nidl/issues"

[tool.setuptools]
platforms = ["Linux", "OSX"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "nidl.__version__"}

[tool.setuptools.packages.find]
exclude = ["doc"]
namespaces = false

[tool.build_sphinx]
source-dir = "doc"
build-dir = "doc/build"
all_files = "1"

[tool.ruff.lint]
preview = true
extend-select = [
    "E225", # missing whitespace around operator
    "E261", # at least two spaces before inline comment
    "E222", # multiple spaces after operator
    "W291", # trailing whitespace
    "E501", # `line-too-long` rule
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "PYI",  # flake8-pyi
    "SIM",  # flake8-simplify
    "FLY",  # flynt
    "I",    # isort
    "N",    # pep8-naming
    "PERF", # Perflint
    "PGH",  # pygrep-hooks
    "UP",   # pyupgrade
    "FURB", # refurb
    "RUF",
]
ignore = [
    "RUF052",   # Local dummy variable `_*` is accessed
    "FURB101",  # `open` and `read` should be replaced by `Path(path).read_text()`
    "FURB103",  # `open` and `write` should be replaced by `Path(logfile).write_text(code)`
    "RUF059",   # Unpacked variable `loss` is never used
    "FURB189",  # Subclassing `dict` can be error prone, use `collections.UserDict` instead
    "N803",     # Argument name should be lowercase
    "N806",      # Variable in function should be lowercase
    "D100",    # Missing docstring in public module
    "D102",    # Missing docstring in public method
    "D104",    # Missing docstring in public package
    "D107",    # Missing docstring in `__init__`
    "D205",    # 1 blank line required between summary line and description
]

[tool.ruff]
line-length = 79
extend-exclude = [
    "tests",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "warnings",
    "pass",
    "raise NotImplementedError",
]
omit = [
    "nidl/info.py",
    "nidl/utils/color.py",
]
